--- a/calc.css
+++ b/calc.css
@@ -77,3 +77,9 @@ button:hover {
   grid-gap: 10px;
   padding: 20px;  
 }
+
+@media screen and (max-width:565px) {
+  .calculator {
+    width: 80%;
+  }
+}
